# DumbyDraw

./: .gitignore  DumbDrawPhD.py  GUI.py  GUI.ui  README.md  deepseek.py  pyproject.toml  requirements.txt
installer/: install.nsi  pack.ps1  run_DumbDrawPhD.bat  run_DumbyDraw.bat
src/dumbdrawphd/: DumbDrawPhD.py  GUI.py  GUI.ui  __main__.py  deepseek.py
src/dumbydraw/: DumbyDraw.py  GUI.py  GUI.ui  __main__.py  deepseek.py
