[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DumbyDraw"
version = "1.4.1"
description = "AI-powered Python plotting GUI tool"
readme = "README.md"
authors = [
    { name = "mo qiqin", email = "moqiqin@live.com" }
]
requires-python = ">=3.8"

dependencies = [
    "pyside6",
    "requests",
    "matplotlib==3.7.5",
    "seaborn",
    "pandas",
    "openpyxl",
    "pillow",
    "biopython",
    "numpy",
    "rasterio",
    "scikit-learn",
    "scikit-image",
    "scipy",
    "opencv-python",
    "openai"
]

[project.scripts]
DumbyDraw = "DumbyDraw.DumbyDraw:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
